Site completely finished

--- a/web/views/products.html
+++ b/web/views/products.html
@@ -50,9 +50,6 @@
         <p class="objective-secondary about-objective-secondary products-objective-secondary">Our versatile products are tailored for human and equine applications. To use them, simply wrap the fabric around the injured area, specify your injury type, and go about your day.</p>
       </div>
     </div>
-    <div class="intro-arrow">
-      <a href="#objective"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true" style="color: rgba(255,255,255, 0.7); font-size: 5vh"></span></a>
-    </div>
   </section>
 
   <section class="quote container-fluid" id="quote">
@@ -72,6 +69,10 @@
             <p class="hidden-xs" style="color: black;">Penta Medical products are designed to be applied externally to any injury on the body while being comfortable, safe, and effective for the patient.<br><br>By delivering infrared therapy from a wearable format, our products eliminate the need for you to travel to a clinic to receive treatment. Our wraps are safe to use at home, at work, and everywhere in-between.</p>
           </div>
         </div>
+      </div>
+      <div class="col-xs-12 xol-sm-12 col-md-0 quote-mobile-only" style="background-color: rgb(255,255,255);">
+        <h2>Human Applications</h2>
+        <p style="color: black;">Penta Medical products are designed to be applied externally to any injury on the body while being comfortable, safe, and effective for the patient.<br><br>By delivering infrared therapy from a wearable format, our products eliminate the need for you to travel to a clinic to receive treatment. Our wraps are safe to use at home, at work, and everywhere in-between.</p>
       </div>
     </div>
   </section>
@@ -93,6 +94,10 @@
           </div>
         </div>
       </div>
+      <div class="col-xs-12 xol-sm-12 col-md-0 quote-mobile-only" style="background-color: rgb(255,255,255);">
+        <h2>Athletic Applications</h2>
+        <p style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
+      </div>
     </div>
   </section>
 
@@ -101,7 +106,7 @@
       <div class="quote-bg col-xs-12 col-sm-12 col-md-5 col-lg-5" style="background-image: url('../img/Products/Bench1.png');">
         <div class="quote-content-xs vertically-centered-container text-center">
           <div class="vertically-centered" style="width: 100%; margin: 0 auto;">
-            <p>Osteoporosis Treatment</p>
+            <p>Osteoporosis &amp; Rheumatoid Arthritis Treatment</p>
           </div>
         </div>
       </div>
@@ -109,11 +114,17 @@
         <div class="vertically-centered-container">
           <div class="portrait-description">
             <h2>Osteoporosis Treatment</h2>
-            <p class="hidden-xs" style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
+            <p style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
             <h2>Rheumatoid Arthritis Treatment</h2>
-            <p class="hidden-xs" style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
+            <p style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
           </div>
         </div>
+      </div>
+      <div class="col-xs-12 xol-sm-12 col-md-0 quote-mobile-only" style="background-color: rgb(255,255,255);">
+        <h2>Osteoporosis Treatment</h2>
+        <p class="" style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
+        <h2>Rheumatoid Arthritis Treatment</h2>
+        <p class="" style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
       </div>
     </div>
   </section>
@@ -135,6 +146,10 @@
           </div>
         </div>
       </div>
+      <div class="col-xs-12 xol-sm-12 col-md-0 quote-mobile-only" style="background-color: rgb(255,255,255);">
+          <h2>Equine Applications</h2>
+          <p style="color: black;">Our wraps can be used to warm muscles for athletes before they get on the field to get to work. They can also be used to increase blood oxygen levels and speed muscle recovery off the field.</p>
+        </div>
     </div>
   </section>
 
