--- a/web/css/index.css
+++ b/web/css/index.css
@@ -309,6 +309,14 @@ body{
   display: none;
 }
 
+.quote-mobile-only{
+  padding-top: 25px;
+  padding-bottom: 20px;
+}
+
+.quote h2{
+  color: rgb(93, 149, 184);
+}
 /********************** Collaborators Styles ******************************/
 #collaborators{
 }
@@ -695,6 +703,10 @@ body{
     padding-right: 3vw;
     color: rgb(71,122,155);
     font-size: 3.5vh;
+  }
+
+  .quote-mobile-only{
+    display: none;
   }
 
   /********************** Collaborators Styles ******************************/
